n8n/sandbox.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: sandbox-api
  name: sandbox-api
  namespace: n8n
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    service: sandbox-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: sandbox-api
  name: sandbox-api
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: sandbox-api
  template:
    metadata:
      labels:
        service: sandbox-api
    spec:
      hostname: sandbox-runner-1
      containers:
        - name: sandbox-api
          image: ghcr.io/n8n-io/n8n-sandbox-service-api:latest
          ports:
            - containerPort: 8080
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: sandbox-tls
              mountPath: /tls
              readOnly: true
        - name: sandbox-runner-1
          image: ghcr.io/n8n-io/n8n-sandbox-service-runner-dind:latest
          securityContext:
            privileged: true
          volumeMounts:
            - name: sandbox-tls
              mountPath: /tls
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: sandbox-tls
          emptyDir: {}
